Fixed animation flicker when minimizing and reopening browser

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -33,6 +33,7 @@ main {
 }
 main #slogan {
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   width: 100%;
